# video_projects

./: README.md
yuv_file_reader/: CMakeLists.txt  main.cpp
